--- a/index_final.html
+++ b/index_final.html
@@ -46,59 +46,19 @@
                 <span class="navbar-brand mb-0 h1">Analyzing NSL-KDD Dataset</span>
             </div>
         </nav>
-
     </header>
 
     <main class="container pb-3">
         <div class="row pt-2">
-            <div class="col-1 text-end pe-2"><strong>X:</strong></div>
+            <div class="col-1 text-end pe-2"><strong>Attack Counts over Protocol Types</strong></div>
             <div class="col-11">
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="x-encoding" value="sepal.length" id="x-sl"
-                        checked>
-                    <label class="form-check-label" for="x-sl">SepalLength</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="x-encoding" value="sepal.width" id="x-sw">
-                    <label class="form-check-label" for="x-sw">SepalWidth</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="x-encoding" value="petal.length" id="x-pl">
-                    <label class="form-check-label" for="x-pl">PetalLength</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="x-encoding" value="petal.width" id="x-pw">
-                    <label class="form-check-label" for="x-pw">PetalWidth</label>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-1 text-end pe-2"><strong>Y:</strong></div>
-            <div class="col-11">
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="y-encoding" value="sepal.length" id="y-sl">
-                    <label class="form-check-label" for="y-sl">SepalLength</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="y-encoding" value="sepal.width" id="y-sw"
-                        checked>
-                    <label class="form-check-label" for="y-sw">SepalWidth</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="y-encoding" value="petal.length" id="y-pl">
-                    <label class="form-check-label" for="y-pl">PetalLength</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="y-encoding" value="petal.width" id="y-pw">
-                    <label class="form-check-label" for="y-pw">PetalWidth</label>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col offset-1">
-                <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" role="switch" id="use-color" checked>
-                    <label class="form-check-label" for="use-color">Color-encode Class</label>
+                    <div class="form-check form-check-inline">
+                        <button type="button" class="btn btn-success">Normal</button>
+                        <button type="button" class="btn btn-danger">Attack</button>
+                    </div>
+                    <div class="form-check form-check-inline">
+                    </div>
                 </div>
             </div>
         </div>
@@ -112,7 +72,7 @@
                 </div>
             </div>
 
-            <svg width="400" height="400" id="histogram">
+            <svg width="400" height="400" id="bar-chart">
             </svg>
         </div>
 
@@ -144,7 +104,7 @@
             dataTable.update(brushedData && brushedData.length > 0 ? brushedData : data, data.columns)
         }
 
-        d3.csv("https://raw.githubusercontent.com/e-/infovis/main/iris.csv")
+        d3.csv("https://raw.githubusercontent.com/CheFly1116/InfoVis/dataset/KDDTrain+_20Percent.txt")
             .then(csvData => {
                 csvData.forEach(d => {
                     d["petal.length"] = +d["petal.length"];
