--- a/index_final.html
+++ b/index_final.html
@@ -107,10 +107,49 @@
         d3.csv("https://raw.githubusercontent.com/CheFly1116/InfoVis/dataset/KDDTrain+_20Percent.txt")
             .then(csvData => {
                 csvData.forEach(d => {
-                    d["petal.length"] = +d["petal.length"];
-                    d["petal.width"] = +d["petal.width"];
-                    d["sepal.length"] = +d["sepal.length"];
-                    d["sepal.width"] = +d["sepal.width"];
+                    d["duration"] = +d["duration"];
+                    d["protocol_type"] = +d["protocol_type"];
+                    d["service"] = +d["service"];
+                    d["flag"] = +d["flag"];
+                    d["src_bytes"] = +d["src_bytes"];
+                    d["dst_bytes"] = +d["dst_bytes"];
+                    d["land"] = +d["land"];
+                    d["wrong_fragment"] = +d["wrong_fragment"];
+                    d["urgent"] = +d["urgent"];
+                    d["hot"] = +d["hot"];
+                    d["num_failed_logins"] = +d["num_failed_logins"];
+                    d["logged_in"] = +d["logged_in"];
+                    d["num_compromised"] = +d["num_compromised"];
+                    d["root_shell"] = +d["root_shell"];
+                    d["su_attempted"] = +d["su_attempted"];
+                    d["num_root"] = +d["num_root"];
+                    d["num_file_creations"] = +d["num_file_creations"];
+                    d["num_shells"] = +d["num_shells"];
+                    d["num_access_files"] = +d["num_access_files"];
+                    d["num_outbound_cmds"] = +d["num_outbound_cmds"];
+                    d["is_host_login"] = +d["is_host_login"];
+                    d["is_guest_login"] = +d["is_guest_login"];
+                    d["count"] = +d["count"];
+                    d["srv_count"] = +d["srv_count"];
+                    d["serror_rate"] = +d["serror_rate"];
+                    d["srv_serror_rate"] = +d["srv_serror_rate"];
+                    d["rerror_rate"] = +d["rerror_rate"];
+                    d["srv_rerror_rate"] = +d["srv_rerror_rate"];
+                    d["same_srv_rate"] = +d["same_srv_rate"];
+                    d["diff_srv_rate"] = +d["diff_srv_rate"];
+                    d["srv_diff_host_rate"] = +d["srv_diff_host_rate"];
+                    d["dst_host_count"] = +d["dst_host_count"];
+                    d["dst_host_srv_count"] = +d["dst_host_srv_count"];
+                    d["dst_host_same_srv_rate"] = +d["dst_host_same_srv_rate"];
+                    d["dst_host_diff_srv_rate"] = +d["dst_host_diff_srv_rate"];
+                    d["dst_host_same_src_port_rate"] = +d["dst_host_same_src_port_rate"];
+                    d["dst_host_srv_diff_host_rate"] = +d["dst_host_srv_diff_host_rate"];
+                    d["dst_host_serror_rate"] = +d["dst_host_serror_rate"];
+                    d["dst_host_srv_serror_rate"] = +d["dst_host_srv_serror_rate"];
+                    d["dst_host_rerror_rate"] = +d["dst_host_rerror_rate"];
+                    d["dst_host_srv_rerror_rate"] = +d["dst_host_srv_rerror_rate"];
+                    d["attack"] = +d["attack"];
+                    d["level"] = +d["level"];
                 });
 
                 data = csvData;
@@ -130,7 +169,7 @@
                     updateDataTable();
                 });
 
-                histogram = new Histogram("#histogram");
+                histogram = new Histogram("#bar-chart");
                 histogram.initialize();
 
                 updateHistogram();
