--- a/count.html
+++ b/count.html
@@ -22,7 +22,7 @@
     <title>NSL-KDD Dataset Analyze</title>
     <style>
         body {
-            background: #white;
+            background: white;
             overflow-y: scroll;
         }
 
