--- a/index_final.html
+++ b/index_final.html
@@ -22,7 +22,7 @@
     <title>NSL-KDD Dataset Analyze</title>
     <style>
         body {
-            background: #white;
+            background: white;
             overflow-y: scroll;
         }
 
@@ -50,7 +50,7 @@
             <div class="container-fluid" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Attack Counts over Protocol Types</a>
+                        <a class="nav-link" href="/count.html">Attack Counts over Protocol Types</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Binary Classification</a>
@@ -64,7 +64,7 @@
     </header>
 
     <main class="container pb-3">
-
+        
     </main>
 
     <script>
