--- a/count.html
+++ b/count.html
@@ -16,29 +16,19 @@
     <script src="components/barchart.js"></script>
 
     <title>NSL-KDD Dataset Analyze</title>
-    <style>
-        body {
-            background: white;
-            overflow-y: scroll;
-        }
-
-        .container {
-            width: 100%;
-            background: white;
-        }
-
-        .brushed {
-            stroke-width: 1;
-            stroke: gray;
-            r: 5;
-        }
-    </style>
+    <link rel="stylesheet" href="components/style.css" />
+        <style>
+            body {
+                background: #eee;
+                overflow-y: scroll;
+            }
+        </style>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 100%; margin: 0 auto">
-            <a class="navbar-brand" href="#" style="margin-left: 40px;">NSL-KDD Analyze</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 1200px; margin: 0 auto">
+            <a class="navbar-brand" href="/index_final.html" style="margin-left: 40px;">NSL-KDD Analyze</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
