--- a/index_final.html
+++ b/index_final.html
@@ -20,28 +20,18 @@
 
 
     <title>NSL-KDD Dataset Analyze</title>
+    <link hrel="stylesheet" href="components/style.css"/>
     <style>
         body {
-            background: white;
+            background: #eee;
             overflow-y: scroll;
-        }
-
-        .container {
-            width: 100%;
-            background: white;
-        }
-
-        .brushed {
-            stroke-width: 1;
-            stroke: gray;
-            r: 5;
         }
     </style>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 100%; margin: 0 auto">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 1200px; margin: 0 auto">
             <a class="navbar-brand" href="#" style="margin-left: 40px;">NSL-KDD Analyze</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,10 +43,10 @@
                         <a class="nav-link" href="/count.html">Attack Counts over Protocol Types</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Binary Classification</a>
+                        <a class="nav-link" href="/binary.html">Binary Classification</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Multi-class Classification</a>
+                        <a class="nav-link" href="/multi.html">Multi-class Classification</a>
                     </li>
                 </ul>
             </div>
@@ -135,20 +125,6 @@
                     updatePC();
                     updateDataTable();
                 });
-
-                histogram = new Histogram("#histogram");
-                histogram.initialize();
-
-                updateHistogram();
-
-                pc = new PC("#pc", data, ["petal.length", "petal.width", "sepal.length", "sepal.width"]);
-                pc.initialize();
-
-                updatePC();
-
-                dataTable = new DataTable("#data-table");
-
-                updateDataTable();
             })
     </script>
 
