--- a/multi.html
+++ b/multi.html
@@ -20,28 +20,18 @@
 
 
     <title>NSL-KDD Dataset Analyze</title>
+    <link rel="stylesheet" href="component/style.css" />
     <style>
         body {
-            background: white;
+            background: #eee;
             overflow-y: scroll;
-        }
-
-        .container {
-            width: 100%;
-            background: white;
-        }
-
-        .brushed {
-            stroke-width: 1;
-            stroke: gray;
-            r: 5;
         }
     </style>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 100%; margin: 0 auto">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 1200px; margin: 0 auto">
             <a class="navbar-brand" href="#" style="margin-left: 40px;">NSL-KDD Analyze</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
