--- a/index_final.html
+++ b/index_final.html
@@ -48,6 +48,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/multi.html">Multi-class Classification</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/describe.html">Dataset Description</a>
+                    </li>
                 </ul>
             </div>
         </nav>
