--- a/multi.html
+++ b/multi.html
@@ -20,7 +20,7 @@
 
 
     <title>NSL-KDD Dataset Analyze</title>
-    <link rel="stylesheet" href="component/style.css" />
+    <link rel="stylesheet" href="components/style.css" />
     <style>
         body {
             background: #eee;
@@ -47,6 +47,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/multi.html">Multi-class Classification</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/describe.html">Dataset Description</a>
                     </li>
                 </ul>
             </div>
