--- a/outlier.html
+++ b/outlier.html
@@ -54,7 +54,7 @@
 
     <main class="container pb-3">
         <div class="text-center" style="margin-top: 10px">
-            <select class="form-select" name="attributes" id="attributes" style="margin-top: 10px">
+            <select class="form-select" name="attributes" id="attributes" style="margin-top: 10px;">
                 <option value="duration" selected>Choose attribute</option>
                         <option value="duration">duration</th>
                         <option value="src_bytes">src_bytes</th>
