--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                         <a class="nav-link" href="/count.html">Attack Counts over Protocol Types</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/binary.html">Binary Classification</a>
+                        <a class="nav-link" href="/binary.html">Outliers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/multi.html">Multi-class Classification</a>
+                        <a class="nav-link" href="/multi.html">Correlation Heatmap</a>
                     </li>
                 </ul>
             </div>
