--- a/count.html
+++ b/count.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="/outlier.html">Outliers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/multi.html">Multi-class Classification</a>
+                        <a class="nav-link" href="/multi.html">Correlation Heatmap</a>
                     </li>
                 </ul>
             </div>
