--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="/binary.html">Outliers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/multi.html">Correlation Heatmap</a>
+                        <a class="nav-link" href="/multi.html">Correlation</a>
                     </li>
                 </ul>
             </div>
@@ -54,7 +54,20 @@
     </header>
 
     <main class="container pb-3">
-        
+        <div class="text-left" style="width: 1200px;">
+            <h3>
+                Attack Counts over Protocol Type<br>
+                <small class="text-muted">Measuring the number of protocol_type of normal packet and attack packet</small>
+            </h3>
+            <h3>
+                Outliers<br>
+                <small class="text-muted">Identifying outliers of each attribute</small>
+            </h3>
+            <h3>
+                Correlation<br>
+                <small class="text-muted">Identifying correlations between attributes</small>
+            </h3>
+        </div>
     </main>
 
     <script>
