--- a/multi.html
+++ b/multi.html
@@ -40,13 +40,13 @@
             <div class="container-fluid" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/count.html">Attack Counts over Protocol Types</a>
+                      <a class="nav-link" href="https://chefly1116.github.io/InfoVis/count">Attack Counts over Protocol Types</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/outlier.html">Outliers</a>
+                      <a class="nav-link" href="https://chefly1116.github.io/InfoVis/outlier">Outliers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/multi.html">Correlation</a>
+                      <a class="nav-link" href="https://chefly1116.github.io/InfoVis/multi">Correlation</a>
                     </li>
                 </ul>
             </div>
