--- a/outlier.html
+++ b/outlier.html
@@ -28,7 +28,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 1200px; margin: 0 auto">
-            <a class="navbar-brand" href="/" style="margin-left: 40px;">NSL-KDD Analyze</a>
+            <a class="navbar-brand" href="https://chefly1116.github.io/InfoVis" style="margin-left: 40px;">NSL-KDD Analyze</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
