--- a/multi.html
+++ b/multi.html
@@ -32,7 +32,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 1200px; margin: 0 auto">
-            <a class="navbar-brand" href="https://chefly1116.github.io/InfoVis" style="margin-left: 40px;">NSL-KDD Analyze</a>
+            <a class="navbar-brand" href="/InfoVis" style="margin-left: 40px;">NSL-KDD Analyze</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,13 +40,13 @@
             <div class="container-fluid" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                      <a class="nav-link" href="https://chefly1116.github.io/InfoVis/count">Attack Counts over Protocol Types</a>
+                      <a class="nav-link" href="/InfoVis/count">Attack Counts over Protocol Types</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="https://chefly1116.github.io/InfoVis/outlier">Outliers</a>
+                      <a class="nav-link" href="/InfoVis/outlier">Outliers</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="https://chefly1116.github.io/InfoVis/multi">Correlation</a>
+                      <a class="nav-link" href="/InfoVis/multi">Correlation</a>
                     </li>
                 </ul>
             </div>
